[gd_scene load_steps=25 format=3 uid="uid://dx61o0k2qkbyn"]

[ext_resource type="Script" uid="uid://bgik4b5e1ed0f" path="res://Scripts/Player/PlayerMain.gd" id="1_shxdu"]
[ext_resource type="Script" uid="uid://b62aoopfoclrm" path="res://Scripts/StateMachine/StateMachine.gd" id="2_8reab"]
[ext_resource type="Script" uid="uid://cms6yihfloo0c" path="res://Scripts/StateMachine/MovementStates/IdleState.gd" id="4_gfkdj"]
[ext_resource type="Script" uid="uid://dxxrvmd6lbfe1" path="res://Scripts/StateMachine/MovementStates/RunState.gd" id="5_xxqkx"]
[ext_resource type="Script" uid="uid://sw546s33kref" path="res://Scripts/StateMachine/MovementStates/JumpState.gd" id="6_j8xm3"]
[ext_resource type="Script" uid="uid://drabvjlvddxcf" path="res://Scripts/StateMachine/MovementStates/AirJumpState.gd" id="7_r5bcf"]
[ext_resource type="Script" uid="uid://bgmityisoyaag" path="res://Scripts/StateMachine/MovementStates/FallState.gd" id="8_7vh4w"]
[ext_resource type="Script" uid="uid://di5ixr838cu31" path="res://Scripts/Player/MoveComponent.gd" id="9_iq7l2"]
[ext_resource type="Script" uid="uid://bou4f0gm3tpv3" path="res://Scripts/StateMachine/MovementStates/CrouchState.gd" id="9_npdhm"]
[ext_resource type="Script" uid="uid://bc6dghklpc6qg" path="res://Scripts/StateMachine/MovementStates/DashState.gd" id="10_fuwcu"]
[ext_resource type="Script" uid="uid://d4cx8oxvsf273" path="res://Scripts/StateMachine/MovementStates/Coyote.gd" id="10_xxqkx"]
[ext_resource type="Script" uid="uid://crytq0b6t6pe2" path="res://Scripts/StateMachine/MovementStates/DeathState.gd" id="11_j8xm3"]
[ext_resource type="Script" uid="uid://cbs3wabntopg3" path="res://Scripts/StateMachine/AttackStates/IdleAttackState.gd" id="12_r5bcf"]
[ext_resource type="Script" uid="uid://j86xkeyxdi8a" path="res://Scripts/StateMachine/AttackStates/JabAttackState.gd" id="13_npdhm"]
[ext_resource type="Script" uid="uid://cmkvhaq134r05" path="res://Scripts/Player/AttackComponent.gd" id="14_7vh4w"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tkgvg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0inx1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bm2sa"]

[sub_resource type="Animation" id="Animation_xlf42"]
resource_name = "Crouch"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrouchCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_85nga"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrouchCollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_782ek"]
resource_name = "null"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76rh1"]
_data = {
&"Crouch": SubResource("Animation_xlf42"),
&"RESET": SubResource("Animation_85nga"),
&"null": SubResource("Animation_782ek")
}

[sub_resource type="LabelSettings" id="LabelSettings_r5bcf"]
font_color = Color(0.0703923, 0.556895, 2.31028e-06, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7vh4w"]
font_color = Color(0.866667, 0.152941, 0.101961, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_shxdu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(20, 30)
texture = SubResource("PlaceholderTexture2D_tkgvg")

[node name="CrouchCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_0inx1")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bm2sa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_76rh1")
}

[node name="TODOstates" type="Node" parent="."]

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_8reab")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("FallState", "JumpState", "MoveState", "CrouchState", "DeadState")]
script = ExtResource("4_gfkdj")
FallState = NodePath("../Fall")
JumpState = NodePath("../Jump")
MoveState = NodePath("../Move")
CrouchState = NodePath("../Crouch")
DeadState = NodePath("../Dead")
animation_name = "RESET"

[node name="Move" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("FallState", "IdleState", "JumpState", "CrouchState", "DashState", "CoyoteState", "DeadState")]
script = ExtResource("5_xxqkx")
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
JumpState = NodePath("../Jump")
CrouchState = NodePath("../Crouch")
DashState = NodePath("../Dash")
CoyoteState = NodePath("../Coyote")
DeadState = NodePath("../Dead")
animation_name = "RESET"

[node name="Jump" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("FallState", "IdleState", "MoveState", "AirJumpState")]
script = ExtResource("6_j8xm3")
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
MoveState = NodePath("../Move")
AirJumpState = NodePath("../AirJump")
animation_name = "RESET"

[node name="AirJump" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("JumpState", "FallState", "IdleState", "MoveState", "AirJumpState")]
script = ExtResource("7_r5bcf")
JumpState = NodePath("../Jump")
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
MoveState = NodePath("../Move")
AirJumpState = NodePath(".")
animation_name = "RESET"

[node name="Fall" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("IdleState", "MoveState", "AirJumpState", "CrouchState")]
script = ExtResource("8_7vh4w")
IdleState = NodePath("../Idle")
MoveState = NodePath("../Move")
AirJumpState = NodePath("../AirJump")
CrouchState = NodePath("../Crouch")
animation_name = "RESET"

[node name="Crouch" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("FallState", "IdleState", "JumpState", "MoveState", "DashState")]
script = ExtResource("9_npdhm")
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
JumpState = NodePath("../Jump")
MoveState = NodePath("../Move")
DashState = NodePath("../Dash")
animation_name = "Crouch"
move_speed = 80.0

[node name="Dash" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("MoveState", "FallState", "IdleState", "JumpState", "CrouchState", "DashState", "CoyoteState", "DeadState")]
script = ExtResource("10_fuwcu")
MoveState = NodePath("../Move")
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
JumpState = NodePath("../Jump")
CrouchState = NodePath("../Crouch")
DashState = NodePath(".")
CoyoteState = NodePath("../Coyote")
DeadState = NodePath("../Dead")
animation_name = "RESET"
move_speed = 850.0

[node name="Coyote" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("MoveState", "FallState", "IdleState", "JumpState", "CrouchState", "DashState", "CoyoteState", "DeadState")]
script = ExtResource("10_xxqkx")
MoveState = NodePath("../Move")
coyote_duration = 4.4
FallState = NodePath("../Fall")
IdleState = NodePath("../Idle")
JumpState = NodePath("../Jump")
CrouchState = NodePath("../Crouch")
DashState = NodePath("../Dash")
CoyoteState = NodePath(".")
DeadState = NodePath("../Dead")
animation_name = "RESET"

[node name="Dead" type="Node" parent="MovementStateMachine"]
script = ExtResource("11_j8xm3")

[node name="AttackStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_8reab")
starting_state = NodePath("IdleAttack")

[node name="IdleAttack" type="Node" parent="AttackStateMachine" node_paths=PackedStringArray("Jab", "DeadState")]
script = ExtResource("12_r5bcf")
Jab = NodePath("../Jab!")
DeadState = NodePath("../../MovementStateMachine/Dead")
animation_name = "RESET"

[node name="Jab!" type="Node" parent="AttackStateMachine" node_paths=PackedStringArray("IdleAttackState", "DeadState")]
script = ExtResource("13_npdhm")
IdleAttackState = NodePath("../IdleAttack")
DeadState = NodePath("../../MovementStateMachine/Dead")
animation_name = "RESET"

[node name="MoveComponent" type="Node" parent="."]
script = ExtResource("9_iq7l2")

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("14_7vh4w")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="AirJumpDelay" type="Timer" parent="Timers"]
unique_name_in_owner = true
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="DashDelayTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="Lables" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="MovementStateLable" type="Label" parent="Lables"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -20.0
offset_top = -41.0
offset_right = 20.0
offset_bottom = -18.0
pivot_offset = Vector2(26, 16)
label_settings = SubResource("LabelSettings_r5bcf")

[node name="AttackStateLable" type="Label" parent="Lables"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -24.0
offset_top = -56.0
offset_right = 16.0
offset_bottom = -33.0
pivot_offset = Vector2(26, 16)
label_settings = SubResource("LabelSettings_7vh4w")
